--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,9 @@
 }
 
 body {
-  background: #333;
-  color: hsl(200, 100%, 90%);
-  max-width: 400px;
+  background: #e8e8e8;
+  color: hsl(200, 72%, 15%);
+  max-width: 600px;
   padding: 1rem;
   margin: 0 auto;
 }
@@ -24,7 +24,7 @@ body {
 }
 
 .btn {
-  background: hsl(200, 100%, 50%, 0.1);
+  background: hsla(200, 50%, 38%, 0.1);
   border: 1px solid hsl(200, 100%, 50%);
   color: hsl(200, 100%, 50%);
   padding: 0.25em 0.5em;
@@ -35,7 +35,7 @@ body {
 
 .btn:hover,
 .btn:focus-visible {
-  background: hsl(200, 100%, 50%, 0.2);
+  background: hsla(200, 28%, 44%, 0.2);
 }
 
 .btn.btn-danger {
